[package]
name = "part-one"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", features = ["train", "ndarray"] }
burn-ndarray = { git = "https://github.com/tracel-ai/burn.git", package = "burn-ndarray" }
rand = "0.9.1"

[features]
metal = ["burn/metal"]
